add : CTRL & DB_context ; update : Models

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "apiEDTDatabase": "Server=localhost:3306;Database=proj;user=root;password=;"
+  }
+
+
 }
