--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "apiEDTDatabase": "Server=localhost:3306;Database=proj;user=root;password=;"
+    "apiEDTDatabase": "server=localhost;userid=root;password=;database=proj;"
   }
 
 
